force-app/main/default/objects/e_Balance_API__c/e_Balance_API__c.object-meta.xml
<CustomObject>
    <label>e Balance</label>
    <nameField>
        <label>e Balance  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e Balance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>