force-app/main/default/objects/e_Balance_API__c/fields/Clothing_API__c.field-meta.xml
<CustomField>
    <fullName>Clothing_API__c</fullName>
    <label>Clothing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>