force-app/main/default/objects/e_Balance_API__c/fields/Total_Balance_API__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance_API__c</fullName>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>