force-app/main/default/objects/e_Balance_API__c/fields/Total_Costumer_API__c.field-meta.xml
<CustomField>
    <fullName>Total_Costumer_API__c</fullName>
    <label>Total Costumer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>